--- a/redis-pro/Views/Sidebar/RedisKeysTableController.xib
+++ b/redis-pro/Views/Sidebar/RedisKeysTableController.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="18122" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="19529" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="18122"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19529"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,7 +23,7 @@
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" tableStyle="fullWidth" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="24" headerView="ext-4a-OBW" viewBased="YES" id="TQN-ha-3Ks">
-                        <rect key="frame" x="0.0" y="0.0" width="846" height="287"/>
+                        <rect key="frame" x="0.0" y="0.0" width="842" height="287"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <size key="intercellSpacing" width="4" height="2"/>
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -105,7 +106,7 @@
                                     <binding destination="faq-y5-9Zk" name="value" keyPath="arrangedObjects" id="J1y-oa-u8f"/>
                                 </connections>
                             </tableColumn>
-                            <tableColumn width="788" minWidth="10" maxWidth="1000" id="QIj-Q1-LSs">
+                            <tableColumn width="780" minWidth="10" maxWidth="1000" id="QIj-Q1-LSs">
                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Key">
                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -118,11 +119,11 @@
                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                 <prototypeCellViews>
                                     <tableCellView id="LUc-U6-Ohy">
-                                        <rect key="frame" x="52" y="1" width="792" height="24"/>
+                                        <rect key="frame" x="52" y="1" width="784" height="24"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LB7-rU-xJp">
-                                                <rect key="frame" x="0.0" y="4" width="792" height="16"/>
+                                                <rect key="frame" x="0.0" y="4" width="784" height="16"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="SyV-PJ-QcO">
                                                     <font key="font" metaFont="cellTitle"/>
@@ -145,13 +146,14 @@
                             </tableColumn>
                         </tableColumns>
                         <connections>
+                            <action selector="action:" target="-2" id="syh-lz-Fe2"/>
                             <binding destination="faq-y5-9Zk" name="content" keyPath="arrangedObjects" id="Ogw-R8-N4o"/>
                             <binding destination="faq-y5-9Zk" name="selectionIndexes" keyPath="selectionIndexes" previousBinding="Ogw-R8-N4o" id="L2L-Yq-ViD"/>
                         </connections>
                     </tableView>
                 </subviews>
             </clipView>
-            <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="8I0-rM-Uzq">
+            <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="8I0-rM-Uzq">
                 <rect key="frame" x="1" y="300" width="842" height="16"/>
                 <autoresizingMask key="autoresizingMask"/>
             </scroller>
@@ -160,12 +162,12 @@
                 <autoresizingMask key="autoresizingMask"/>
             </scroller>
             <tableHeaderView key="headerView" wantsLayer="YES" id="ext-4a-OBW">
-                <rect key="frame" x="0.0" y="0.0" width="846" height="28"/>
+                <rect key="frame" x="0.0" y="0.0" width="842" height="28"/>
                 <autoresizingMask key="autoresizingMask"/>
             </tableHeaderView>
             <point key="canvasLocation" x="239" y="163.5"/>
         </scrollView>
-        <arrayController id="faq-y5-9Zk">
+        <arrayController avoidsEmptySelection="NO" id="faq-y5-9Zk">
             <connections>
                 <binding destination="-2" name="contentArray" keyPath="self.datasource" id="fyU-70-No2"/>
             </connections>
