--- a/redis-pro/Views/RedisEditorView/HashEntryTableController.xib
+++ b/redis-pro/Views/RedisEditorView/HashEntryTableController.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="18122" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="19529" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="18122"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="19529"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -106,6 +107,7 @@
                             </tableColumn>
                         </tableColumns>
                         <connections>
+                            <action trigger="doubleAction" selector="doubleAction:" target="-2" id="hKo-fJ-xep"/>
                             <binding destination="HqO-eU-xOj" name="content" keyPath="arrangedObjects" id="JJr-4E-jFO"/>
                             <binding destination="HqO-eU-xOj" name="selectionIndexes" keyPath="selectionIndexes" previousBinding="JJr-4E-jFO" id="DjG-DV-xXR"/>
                         </connections>
